# etl_marinadaggdjur_dwc

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  envtemplate  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
etl_configs/: seal.yml  seal_observations.sql  tumlare.yml  tumlare_observations.sql
scripts/: validate_configs.py
src/marinadaggdjur/: __main__.py  etl_runner.py  main.py
src/marinadaggdjur/config/: config_loader.py
src/marinadaggdjur/extraction/: extract.py
src/marinadaggdjur/loading/: load.py
src/marinadaggdjur/transformation/: transform.py
src/tumlaretogbif/: etl_runner.py  main.py
src/tumlaretogbif/config/: config_loader.py
src/tumlaretogbif/extraction/: extract.py
src/tumlaretogbif/loading/: load.py
src/tumlaretogbif/transformation/: transform.py
src/tumlaretogbif/utils/: logging_utils.py
tests/: conftest.py  test_config_validation.py  test_seal.py  test_tumlare.py
