[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marinadaggdjur"
version = "0.1.0"
description = "Configuration-driven ETL for marine mammal observations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy==2.0.36",
    "PyMySQL==1.1.1",
    "pandas==2.2.3",
    "cryptography==43.0.3",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "pytest==8.3.5",
    "ruff==0.11.4",
]

[project.scripts]
marinadaggdjur = "marinadaggdjur.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
